--- a/frontend/monthly_dashboard.html
+++ b/frontend/monthly_dashboard.html
@@ -30,15 +30,15 @@
             </label>
 
             <div id="totals" class="mt-4 grid grid-cols-1 sm:grid-cols-3 gap-4">
-                <div class="bg-white p-4 rounded shadow border border-gray-400 text-center">
+                <div class="cards cards-tight text-center">
                     <p class="text-gray-500">Income</p>
                     <p id="income-total" class="text-3xl font-bold">£0.00</p>
                 </div>
-                <div class="bg-white p-4 rounded shadow border border-gray-400 text-center">
+                <div class="cards cards-tight text-center">
                     <p class="text-gray-500">Outgoings</p>
                     <p id="outgoings-total" class="text-3xl font-bold">£0.00</p>
                 </div>
-                <div class="bg-white p-4 rounded shadow border border-gray-400 text-center">
+                <div class="cards cards-tight text-center">
                     <p class="text-gray-500">Delta</p>
                     <p id="delta-total" class="text-3xl font-bold">£0.00</p>
                 </div>
