--- a/frontend/project_add.html
+++ b/frontend/project_add.html
@@ -21,7 +21,7 @@
         <h1 class="text-2xl font-semibold mb-4 text-indigo-700">Add Project</h1>
         <p class="mb-4">Capture ideas for home projects and detail their costs and benefits.</p>
 
-        <section class="bg-white p-6 rounded shadow border border-gray-400">
+        <section class="cards">
             <h2 class="text-xl font-semibold mb-4">Project Details</h2>
             <form id="project-form" class="grid md:grid-cols-2 gap-4">
                 <input type="hidden" id="project_id">
