--- a/frontend/transaction.html
+++ b/frontend/transaction.html
@@ -49,7 +49,7 @@
             }
 
             const card = document.createElement('div');
-            card.className = 'relative bg-white p-6 rounded shadow';
+            card.className = 'cards';
 
             function createBadge(text, colorClasses) {
                 const span = document.createElement('span');
