--- a/frontend/budgets.html
+++ b/frontend/budgets.html
@@ -31,17 +31,17 @@
                 <button type="submit" class="bg-indigo-600 text-white px-4 py-2 rounded self-end">Set Budget</button>
             </form>
         </section>
-        <section class="bg-white p-6 rounded shadow border border-gray-400">
-            <h2 class="text-xl font-semibold mb-4">AI Budgeting</h2>
+        <section class="cards space-y-4">
+            <h2 class="text-xl font-semibold">AI Budgeting</h2>
 
-            <p class="mb-4">Send your savings goal and the last 12 months of category totals to the AI to propose next month's budgets and provide a brief explanation.</p>
+            <p>Send your savings goal and the last 12 months of category totals to the AI to propose next month's budgets and provide a brief explanation.</p>
             <form id="ai-form" class="md:flex md:space-x-4 space-y-4 md:space-y-0">
                 <label class="block">Savings Goal (£)<br><input type="number" step="0.01" id="goal" class="border p-2 rounded" data-help="Monthly amount you want to save. The AI uses this plus a year of history to set budgets."></label>
                 <button id="ai-run" type="submit" class="bg-indigo-600 text-white px-4 py-2 rounded self-end"><i class="fas fa-robot inline w-4 h-4 mr-1"></i>Generate Budgets</button>
             </form>
             <div id="ai-result" class="mt-4"></div>
-            <div id="ai-debug" class="mt-4 hidden">
-                <div class="bg-white p-4 rounded shadow border border-gray-400">
+            <div id="ai-debug" class="hidden">
+                <div class="cards cards-tight space-y-3">
                     <h3 class="font-semibold text-gray-700 mb-2">AI Debug</h3>
                     <p class="text-sm font-semibold">Prompt</p>
                     <pre id="ai-debug-request" class="text-xs bg-gray-100 p-2 mb-2 overflow-x-auto"></pre>
@@ -55,7 +55,7 @@
             <h2 class="text-xl font-semibold mb-4">Current Budgets</h2>
             <div id="budget-table"></div>
         </section>
-        <section class="bg-white p-6 rounded shadow border border-gray-400">
+        <section class="cards">
             <h2 class="text-xl font-semibold mb-4">Budget Progress</h2>
             <div id="budget-chart" style="height:400px" data-chart-desc="Bullet chart comparing spending to budgets."></div>
         </section>
