--- a/frontend/index.html
+++ b/frontend/index.html
@@ -98,7 +98,7 @@
                     </div>
                 </div>
                 <div class="mt-6 grid grid-cols-1 gap-4 md:grid-cols-3">
-                    <a href="ai_tags.html" class="group flex items-center justify-between rounded-2xl bg-white p-5 shadow-lg transition hover:-translate-y-1 hover:shadow-xl" aria-label="Tune AI tagging rules">
+                    <a href="ai_tags.html" class="group flex items-center justify-between cards cards-snug cards-rounded-xl" aria-label="Tune AI tagging rules">
                         <div>
                             <p class="text-xs font-semibold uppercase tracking-wide text-indigo-600">Automation</p>
                             <p class="mt-1 text-sm text-gray-700">Fine-tune AI tags to keep categories consistent.</p>
@@ -107,7 +107,7 @@
                             <i class="fas fa-magic text-xl" aria-hidden="true"></i>
                         </span>
                     </a>
-                    <a href="budgets.html" class="group flex items-center justify-between rounded-2xl bg-white p-5 shadow-lg transition hover:-translate-y-1 hover:shadow-xl" aria-label="Review your budgets">
+                    <a href="budgets.html" class="group flex items-center justify-between cards cards-snug cards-rounded-xl" aria-label="Review your budgets">
                         <div>
                             <p class="text-xs font-semibold uppercase tracking-wide text-indigo-600">Budgets</p>
                             <p class="mt-1 text-sm text-gray-700">See which targets are thriving and where to adjust.</p>
@@ -116,7 +116,7 @@
                             <i class="fas fa-bullseye text-xl" aria-hidden="true"></i>
                         </span>
                     </a>
-                    <a href="search.html" class="group flex items-center justify-between rounded-2xl bg-white p-5 shadow-lg transition hover:-translate-y-1 hover:shadow-xl" aria-label="Search transactions">
+                    <a href="search.html" class="group flex items-center justify-between cards cards-snug cards-rounded-xl" aria-label="Search transactions">
                         <div>
                             <p class="text-xs font-semibold uppercase tracking-wide text-indigo-600">Investigation</p>
                             <p class="mt-1 text-sm text-gray-700">Drill into transactions with powerful filtering.</p>
@@ -130,22 +130,22 @@
             </section>
 
             <section class="grid grid-cols-1 md:grid-cols-3 gap-4 mt-8 opacity-0 transition-opacity duration-700" data-no-card="true">
-                <div class="bg-white/70 p-6 rounded shadow border border-white/40 backdrop-blur-xl ring-1 ring-white/50 flex flex-col items-center text-center transition transform hover:-translate-y-1 hover:shadow-lg">
+                <div class="cards cards-tight flex flex-col items-center text-center">
                     <i class="fas fa-chart-line fa-6x mb-2 text-indigo-600"></i>
                     <p class="text-gray-700">Visualise your spending trends with clear charts that highlight where your money goes.</p>
                 </div>
-                <div class="bg-white/70 p-6 rounded shadow border border-white/40 backdrop-blur-xl ring-1 ring-white/50 flex flex-col items-center text-center transition transform hover:-translate-y-1 hover:shadow-lg">
+                <div class="cards cards-tight flex flex-col items-center text-center">
                     <i class="fas fa-piggy-bank fa-6x mb-2 text-indigo-600"></i>
                     <p class="text-gray-700">Track savings effortlessly to see how your balance grows over time.</p>
                 </div>
-                <div class="bg-white/70 p-6 rounded shadow border border-white/40 backdrop-blur-xl ring-1 ring-white/50 flex flex-col items-center text-center transition transform hover:-translate-y-1 hover:shadow-lg">
+                <div class="cards cards-tight flex flex-col items-center text-center">
                     <i class="fas fa-wallet fa-6x mb-2 text-indigo-600"></i>
                     <p class="text-gray-700">Manage budgets with ease by setting targets and watching your progress.</p>
                 </div>
             </section>
 
 
-            <section class="mt-8 bg-white p-8 rounded-lg shadow-lg opacity-0 transition-opacity duration-700" data-no-card="true">
+            <section class="mt-8 cards cards-roomy opacity-0 transition-opacity duration-700" data-no-card="true">
 
                 <h2 class="text-2xl font-semibold mb-4 text-indigo-700">What You Can Do</h2>
                 <div class="grid grid-cols-1 sm:grid-cols-2 gap-4">
@@ -221,7 +221,7 @@
             </section>
 
 
-            <section class="mt-8 bg-white p-8 rounded-lg shadow-lg opacity-0 transition-opacity duration-700" data-no-card="true">
+            <section class="mt-8 cards cards-roomy opacity-0 transition-opacity duration-700" data-no-card="true">
 
                 <h2 class="text-2xl font-semibold mb-4 text-indigo-700">How Data Is Organised</h2>
                 <svg role="img" aria-label="Segments link to categories and tags while groups stand alone" class="mx-auto mb-4" width="360" height="120">
