--- a/frontend/palette.html
+++ b/frontend/palette.html
@@ -18,7 +18,7 @@
     <main class="flex-1 p-6">
       <h1 class="text-2xl font-semibold mb-4 text-indigo-700">Palette Settings</h1>
 
-      <div class="bg-white p-6 rounded shadow border border-gray-400 space-y-4">
+      <div class="cards space-y-4">
         <ul class="list-disc pl-5 text-gray-700">
           <li>Set segment colours using the picker beside each name. Ticking <em>Lock</em> keeps your choice.</li>
           <li>To reset a segment, untick its <em>Lock</em> box and press <strong>Refresh</strong>.</li>
