Display real landing metrics

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -52,19 +52,19 @@
                             </div>
                             <dl class="grid grid-cols-1 gap-4 pt-6 text-left sm:grid-cols-3">
                                 <div class="rounded-2xl bg-white/10 p-4 shadow-lg">
-                                    <dt class="text-xs font-semibold uppercase tracking-wide text-indigo-100">Managed balance</dt>
-                                    <dd class="mt-1 text-3xl font-semibold">£1.8m</dd>
-                                    <dd class="mt-1 text-sm text-indigo-100 opacity-80">Across linked accounts</dd>
+                                    <dt class="text-xs font-semibold uppercase tracking-wide text-indigo-100">Accounts tracked</dt>
+                                    <dd id="landing-stat-accounts" class="mt-1 text-3xl font-semibold" aria-live="polite">0</dd>
+                                    <dd class="mt-1 text-sm text-indigo-100 opacity-80">Connected to your workspace</dd>
                                 </div>
                                 <div class="rounded-2xl bg-white/10 p-4 shadow-lg">
-                                    <dt class="text-xs font-semibold uppercase tracking-wide text-indigo-100">Transactions tracked</dt>
-                                    <dd class="mt-1 text-3xl font-semibold">120k+</dd>
-                                    <dd class="mt-1 text-sm text-indigo-100 opacity-80">Auto-tagged with AI</dd>
+                                    <dt class="text-xs font-semibold uppercase tracking-wide text-indigo-100">Transactions recorded</dt>
+                                    <dd id="landing-stat-transactions" class="mt-1 text-3xl font-semibold" aria-live="polite">0</dd>
+                                    <dd class="mt-1 text-sm text-indigo-100 opacity-80">Updated as you import</dd>
                                 </div>
                                 <div class="rounded-2xl bg-white/10 p-4 shadow-lg">
-                                    <dt class="text-xs font-semibold uppercase tracking-wide text-indigo-100">Budgets on target</dt>
-                                    <dd class="mt-1 text-3xl font-semibold">92%</dd>
-                                    <dd class="mt-1 text-sm text-indigo-100 opacity-80">Refreshed every week</dd>
+                                    <dt class="text-xs font-semibold uppercase tracking-wide text-indigo-100">Tags available</dt>
+                                    <dd id="landing-stat-tags" class="mt-1 text-3xl font-semibold" aria-live="polite">0</dd>
+                                    <dd class="mt-1 text-sm text-indigo-100 opacity-80">Helping categorise spend</dd>
                                 </div>
                             </dl>
                         </div>
@@ -256,6 +256,7 @@
     <script src="js/scroll_animations.js"></script>
 
     <script src="js/carousel.js"></script>
+    <script src="js/landing_stats.js"></script>
 
   </body>
 </html>
