Enhance frontend background gradient

--- a/frontend/2fa.html
+++ b/frontend/2fa.html
@@ -16,7 +16,7 @@
       <link rel="icon" type="image/png" sizes="any" href="/favicon.png">
       <!-- Icons provided by Font Awesome loaded via menu.js -->
 </head>
-<body class="bg-gradient-to-b from-indigo-50 to-white" data-api-base="../php_backend/public">
+<body class="bg-gradient-to-b from-indigo-200 via-slate-100 to-white" data-api-base="../php_backend/public">
     <div class="flex min-h-screen">
         <nav id="menu" class="hidden md:flex md:flex-col w-64 flex-shrink-0 bg-transparent p-6 overflow-y-auto"></nav>
         <main class="flex-1 min-w-0 overflow-x-auto p-6">
