--- a/frontend/index.html
+++ b/frontend/index.html
@@ -23,7 +23,7 @@
       }
     </style>
 </head>
-<body class="bg-gradient-to-b from-indigo-50 to-white">
+<body class="bg-gradient-to-b from-indigo-200 via-slate-100 to-white">
     <div class="flex flex-col md:flex-row min-h-screen">
         <nav id="menu" class="hidden md:flex md:flex-col w-64 flex-shrink-0 bg-transparent p-6 overflow-y-auto shadow"></nav>
         <main class="flex-1 min-w-0 overflow-x-auto p-6">
